# vietnews

./: .gitignore  CLAUDE.md  CONTEXT.md  Dockerfile  HANDOFF.md  README.md
.github/workflows/: ci.yml  keep_alive.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/api/: main.py  scheduler.py
backend/src/db/: migrations.py  neon.py
backend/src/etl/: __init__.py  classifier.py  cleaner.py  pipeline.py
backend/src/queue/: redis_client.py
backend/src/scraper/: base.py  vietnamplus.py
backend/tests/: test_api.py  test_db.py  test_etl.py  test_redis.py  test_scraper.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ActionButtons.tsx  Banner.tsx  CategoryTabs.tsx  CrawlForm.tsx  Header.tsx  HeroCard.tsx  MainFeed.tsx  NewsFeed.tsx  NewsMeta.tsx
frontend/src/components/__tests__/: components.test.tsx
renderer/: package-lock.json  package.json  tsconfig.json
renderer/src/: cloudinary_uploader.ts  run.ts  satori_render.ts  template.tsx
renderer/tests/: render.test.ts
scripts/: regenerate_all.py  smoke_test.sh
