[project]
name = "vietnews-backend"
version = "0.1.0"
description = "VietNews automated news parser backend"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.27.0",
    "selectolax>=0.3.21",
    "redis>=5.0.0",
    "psycopg2-binary>=2.9.9",
    "python-dotenv>=1.0.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "apscheduler>=3.10.4",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-mock>=3.14.0",
    "pytest-asyncio>=0.23.0",
]
